compiler/testData/diagnostics/tests/deparenthesize/ParenthesizedVariable.kt
fun test() {
    (<!REDUNDANT_LABEL_WARNING!>d@<!> <!DECLARATION_IN_ILLEGAL_CONTEXT!>val <!UNUSED_VARIABLE!>bar<!> = 2<!>)
}